--- a/src/Components/SignUp/sign-up.css
+++ b/src/Components/SignUp/sign-up.css
@@ -31,7 +31,7 @@
     background-color: rgb(248, 248, 248);
 }
 
-.app-signup .submit {
+.app-signup .submited {
     width: 90%;
     margin-bottom: 10px;
     border: none;
@@ -44,6 +44,17 @@
 
 }
 
+.submited:active {
+    transform: scale(0.98);
+}
+
+.submited:focus {
+    outline: 0;
+}
+
+.submited:disabled {
+    background-color: #e0e0e0;
+}
 
 .policy {
     position: absolute;
