--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -30,7 +30,7 @@
     background-color: rgb(248, 248, 248);
 }
 
-.app-signin .submit {
+.app-signin .submited {
     width: 90%;
     margin-bottom: 10px;
     border: none;
@@ -43,6 +43,17 @@
 
 }
 
+.submited:active {
+    transform: scale(0.98);
+}
+
+.submited:focus {
+    outline: 0;
+}
+
+.submited:disabled {
+    background-color: #e0e0e0;
+}
 
 .dont-have-account {
     position: absolute;
