added loading spinners to my app

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,20 @@
     background-color: #fafafa;
     height: 100vh;
 }
+
+.spineer {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner {
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
